# rxqlite-client

./: Cargo.toml  README.md  build.bat  build.sh  test.bat  test.sh
.github/: ci.yaml
.github/workflows/: ci.yaml
examples/: simple.rs
src/: lib.rs
src/tests/: invalid_queries.rs  mod.rs  notifications.rs  table_notifications.rs
