[package]
name = "rxqlite-client"
version = "0.1.1"
edition = "2021"
readme = "README.md"
authors = [
    "ha421 <hha835773@gmail.com>",
]
categories = ["distributed", "database", "raft" , "sqlite" ]
description = "A client for rxqlite."
homepage = "https://github.com/HaHa421/rxqlite-client"
keywords = ["distributed", "sqlite"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HaHa421/rxqlite-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = { version = "0.3.30" , optional = true}
futures-util= { version = "0.3.30" , features = [ "sink" ] }
reqwest = { version = "0.12", default-features=false , features = ["json" , "rustls-tls" ,"http2" ] }
rustls = {version = "0.22" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.58"
tokio = { version = "1.37", features = ["full"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7" , features = [ "codec" ] }
tracing = "0.1.40"


[dependencies.rxqlite-lite-common]
version = "0.1"
#path = "../rxqlite/crates/rxqlite-lite-common"

[dependencies.rxqlite-common]
version = "0.1"
#path = "../rxqlite/crates/rxqlite-common"

[dependencies.rxqlite-notification]
version = "0.1"
#path = "../rxqlite/crates/rxqlite-notification"

[dependencies.rxqlite-tests-common]
version = "0.1.7"
#path = "../rxqlite/crates/rxqlite-tests-common" 
optional = true


[features] 
test-dependency = ["rxqlite-tests-common" , "futures" ]

[dev-dependencies]
anyhow = "1"
futures = { version = "0.3.30" }
chrono = "0.4"

[dev-dependencies.rxqlite-tests-common]
version = "0.1.7"
#path = "../rxqlite/crates/rxqlite-tests-common"

[dev-dependencies.rxqlite-common]
version = "0.1"
#path = "../rxqlite/crates/rxqlite-common"

